Implement chromosomes function
not checked yet
functions accessing fasta file in separate
sequence.py file
